# Silver-Bullet-ML-BMAD

./: .env.bydfi.example  .env.crypto.example  .env.example  .env.kraken.example  .env.kucoin.example  .env.telegram.example  .gitignore  .pre-commit-config.yaml  1MINUTE_BACKTEST_FINAL_REPORT.md  1_MINUTE_MIGRATION_PLAN.md  BACKTEST_FIXES_SUMMARY.md  BACKTEST_RESULTS_SUMMARY.md  CLAUDE.md  COMPLETE_BACKTEST_REPORT.md  CRITICAL_ISSUES_FIXED.md  DATA_COLLECTION_COMPLETE.md  DATA_COLLECTION_GUIDE.md  DEPLOYMENT.md  DEPLOYMENT_CONFIGURATION_40PCT_THRESHOLD.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_SUMMARY.md  E2E_TEST_REPORT_EPIC2.md  EPIC1_SUMMARY.md  EPIC2_COMPLETE_FIX_SUMMARY.md  EPIC2_FINAL_ANALYSIS.md  EPIC2_FIX_SUMMARY.md  EPIC2_FULL_DATASET_FINDINGS.md  EPIC2_REAL_DATA_INTEGRATION.md  EPIC2_REAL_DATA_OUTPUT_SUMMARY.md  EPIC2_REFINEMENT_FINDINGS.md  EPIC4_COMPLETION_REPORT.md  EPIC_5_COMPLETION_SUMMARY.md  EPIC_5_PHASE_2_COMPLETION_SUMMARY.md  EPIC_COMPLETION_SUMMARY.md  EXTENDED_TRADING_PREPARATION_SUMMARY.md  EXTENDED_VALIDATION_CHECKLIST.md  HYBRID_BACKTEST_ANALYSIS.md  HYBRID_DEPLOYMENT_GUIDE.md  HYBRID_INTEGRATION_COMPLETE.md  IMPLEMENTATION_STATUS.md  (+435 more)
.review/: findings-classification.md  implementation_diff.patch  spec-2-1.md  spec-2-2.md  spec-2-3.md  spec-2-4.md  spec-6-4.md  story_2_1_diff.patch  story_2_2_diff.patch  story_2_3_diff.patch  story_2_4_diff.patch
.streamlit/: config.toml
_bmad-output/: bug_yank_ml_filter_silently_disabled_2026-06-27.md  decision_yank_cross_instrument_tune_train_oos_sequencing.md  gap1_friday_review_20260704.md  halt_review_20260713_ride_buffer.md  halt_review_mim_nb_parity_20260707.md  hg_gate1_holdout_verdict_20260704.md  hg_slippage_verdict_20260704.md  innovation-strategy-2026-07-03.md  option_b_gate0_verdict_20260703.md  option_c_retrospective_20260703.md  pair_divergence_survey_results_2026-06.md  pair_survey_gate0_grid.csv  pair_survey_gate0_grid_5m.csv  phase1_verdict_20260523.md  phase2_verdict_20260523.md  pl_combine_fit_verdict_20260705.md  pl_slippage_verdict_20260705.md  precommit_hg_slippage_amendment1_mhgu26.md  precommit_hg_slippage_measurement_2026-06.md  precommit_pair_divergence_survey_2026-06.md  precommit_pair_survey_addendum_5m_2026-06.md  precommit_pair_survey_addendum_btc_eth_2026-06.md  precommit_pl_slippage_amendment1_plv26.md  precommit_pl_slippage_measurement_2026-06.md  precommit_sil_slippage_measurement_2026-06.md  precutover_verification_results.md  preregistration_btc_carry_backtest.md  preregistration_btc_carry_entry_confirmation.md  preregistration_btc_carry_exit_rules_v2.md  preregistration_btc_carry_exit_rules_v3.md  preregistration_btc_eth_stat_arb.md  preregistration_btc_frrf.md  preregistration_btc_frrf_s27v2.md  preregistration_btc_kz_utc.md  preregistration_btc_tsmom_backtest.md  preregistration_btc_tsmom_rf_backtest.md  preregistration_dix_gex_swing_interaction.md  preregistration_gap_fade_panic_open.md  preregistration_gate_test.md  preregistration_gc_cpi_prospective.md  (+66 more)
configs/: regime_0_deployment_config.yaml
data/: audit_trail.csv
deploy/: combine-floor-monitor.service  trader-mim-nb.service
docs/: ARCHITECTURE.md  DEVELOPMENT.md  SOURCE_TREE.md  automated_retraining_integration.md  bydfi-implementation-summary.md  bydfi-quickstart.md  epic-1-retrospective.md  epic-2-e2e-test-plan.md  index.md  kucoin-implementation-summary.md  kucoin-quickstart.md  premium_advanced_optimizations.md  premium_deployment_plan.md  premium_implementation_complete.md  premium_implementation_steps_corrected.md  premium_optimization_results.md  premium_strategy.md  project-scan-report.json  regime_0_deployment_guide.md  story-5-1-1-implementation-summary.md  story-5-1-2-implementation-summary.md
examples/: automated_retraining_integration.py
integrations/: README.md  setup_tradingview_export.sh  tradingview_pine_script.txt  tradingview_webhook_receiver.py
trader/: README.md  (+3 more)
(+1090 files in other folders)
