[tool.poetry]
name = "silver-bullet-ml-bmad"
version = "0.1.0"
description = "ICT + ML Meta-Labeling Trading System for MNQ Futures"
authors = ["Bambam"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
httpx = "^0.24.0"
python-dotenv = "^1.0.0"
pydantic = "^2.0.0"
pydantic-settings = "^2.0.0"
websockets = "^12.0"

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
flake8 = "^6.0.0"
mypy = "^1.3.0"
pre-commit = "^3.3.0"
pytest = "^7.4.0"
pytest-asyncio = "^0.21.0"
pytest-mock = "^3.11.0"
pytest-cov = "^4.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py311']

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = "src.data.config"
ignore_errors = true

[[tool.mypy.overrides]]
module = "src.data.websocket"
ignore_errors = true

[[tool.mypy.overrides]]
module = "src.data.models"
ignore_errors = true
